--- a/paginas/accidentes.html
+++ b/paginas/accidentes.html
@@ -58,7 +58,7 @@
     </div>
     <!--Fin de la ventana modal-->
     
-    <button id = "btnAgregar">Agregar</button>
+    <button class = "btnAgregar">Agregar</button>
     <script src="/scripts/script_modal.js"></script>
 </body>
 </html>
